[package]
name = "oramfs"
version = "1.0.0"
authors = ["Nils Amiet <nils.amiet@kudelskisecurity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
time = "0.1"
libc = "0.2"
structopt = "0.3.20"
env_logger = "0.8.2"
log = "0.4.11"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_bytes = "0.11.5"
serde_yaml = "0.8"
bincode = "1.3.1"
aes = { version = "0.7.4", features = ["ctr"] }
ctr = "0.7.0"
chacha20 = "0.6.0"
bytes = { version = "0.6.0", features = ["serde"] }
daemonize = "0.4.1"
rpassword = "5.0.0"
argon2 = "0.2.1"
rand_core = { version = "0.6", features = ["std"] }
vec_map = "0.8.2"
nohash-hasher = "0.2.0"
shellexpand = "2.1.0"
question = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pathoram"
harness = false