[package]
name = "oramfs"
version = "1.0.0"
authors = ["Nils Amiet <nils.amiet@kudelskisecurity.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Oramfs provides a fully encrypted and optionally authenticated Oblivious RAM filesystem."
homepage = "https://github.com/kudelskisecurity/oramfs"
repository = "https://github.com/kudelskisecurity/oramfs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
time = "0.1"
libc = "0.2.126"
structopt = "0.3.26"
env_logger = "0.8.4"
log = "0.4.17"
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_yaml = "0.8.24"
bincode = "1.3.3"
aes = { version = "0.7.5", features = ["ctr"] }
aes-gcm = "0.9.4"
ctr = "0.7.0"
chacha20 = "0.6.0"
bytes = { version = "0.6.0", features = ["serde"] }
daemonize = "0.4.1"
rpassword = "5.0.1"
argon2 = "0.2.4"
rand_core = { version = "0.6.3", features = ["std"] }
vec_map = "0.8.2"
nohash-hasher = "0.2.0"
shellexpand = "2.1.0"
question = "0.2.2"
base64 = "0.13.0"
runas = "0.2.1"
users = "0.11.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pathoram"
harness = false